{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 101,
  "lineage": "c870be0b-a752-b56a-b7f7-f9600f7418b1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-08-19T14:17:44.555-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/queplan-469422/global/firewalls/queplan-469422-allow-internal",
            "log_config": [],
            "name": "queplan-469422-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/networks/queplan-469422-vpc",
            "priority": 1000,
            "project": "queplan-469422",
            "self_link": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/firewalls/queplan-469422-allow-internal",
            "source_ranges": [
              "0.0.0.0/0",
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-19T14:17:44.327-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/queplan-469422/global/firewalls/queplan-469422-allow-ssh",
            "log_config": [],
            "name": "queplan-469422-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/networks/queplan-469422-vpc",
            "priority": 1000,
            "project": "queplan-469422",
            "self_link": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/firewalls/queplan-469422-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.187.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-08-19T14:19:38.933-07:00",
            "id": "projects/queplan-469422/global/addresses/queplan-469422-private-ip-alloc",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "queplan-469422-private-ip-alloc",
            "network": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/networks/queplan-469422-vpc",
            "prefix_length": 16,
            "project": "queplan-469422",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/addresses/queplan-469422-private-ip-alloc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/queplan-469422/global/networks/queplan-469422-vpc",
            "mtu": 1460,
            "name": "queplan-469422-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6246728797749077908",
            "project": "queplan-469422",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/networks/queplan-469422-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "connector_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-19T14:19:39.005-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/queplan-469422/regions/us-central1/subnetworks/queplan-469422-connector-subnet",
            "ip_cidr_range": "10.1.0.0/28",
            "name": "queplan-469422-connector-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/networks/queplan-469422-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "queplan-469422",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/queplan-469422/regions/us-central1/subnetworks/queplan-469422-connector-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-19T14:19:38.918-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/queplan-469422/regions/us-central1/subnetworks/queplan-469422-private-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "queplan-469422-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/queplan-469422/global/networks/queplan-469422-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "queplan-469422",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/queplan-469422/regions/us-central1/subnetworks/queplan-469422-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.apis"
          ]
        }
      ]
    }
  ]
}